package com.prj1.ccm.billing.calc;

public record KhoanPhatSinh(
        Long id,
        String tenKhoan,
        TienTe soTien
) {
}
