CREATE TABLE ANH_DINH_KEM (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    doi_tuong_loai VARCHAR(50) NOT NULL CHECK (doi_tuong_loai IN ('NGUOI_THUE', 'CHI_SO_DICH_VU', 'YEU_CAU_SUA_CHUA')),
    doi_tuong_id BIGINT NOT NULL,
    khoa_luu_tru VARCHAR(255) NOT NULL UNIQUE,
    ghi_chu VARCHAR(255) NULL,
    loai_noi_dung VARCHAR(100) NOT NULL,
    kich_thuoc BIGINT NOT NULL CHECK (kich_thuoc > 0)
);

CREATE INDEX idx_anh_dinh_kem_doi_tuong ON ANH_DINH_KEM (doi_tuong_loai, doi_tuong_id);
