CREATE TABLE KY_THANH_TOAN (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    toa_nha_id BIGINT NOT NULL REFERENCES TOA_NHA(id),
    nam INTEGER NOT NULL CHECK (nam >= 2000),
    thang INTEGER NOT NULL CHECK (thang BETWEEN 1 AND 12),
    ngay_bat_dau DATE NOT NULL,
    ngay_ket_thuc DATE NOT NULL,
    trang_thai VARCHAR(20) NOT NULL CHECK (trang_thai IN ('DANG_MO', 'DA_CHOT')),
    CONSTRAINT ck_ky_thanhtoan_ngay CHECK (ngay_ket_thuc >= ngay_bat_dau)
);

CREATE UNIQUE INDEX uq_ky_thanhtoan_toa_nam_thang
    ON KY_THANH_TOAN (toa_nha_id, nam, thang);

CREATE UNIQUE INDEX uq_ky_thanhtoan_toa_dang_mo
    ON KY_THANH_TOAN (toa_nha_id)
    WHERE trang_thai = 'DANG_MO';
