CREATE TABLE SO_DU_KHA_DUNG (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    hop_dong_id BIGINT NOT NULL REFERENCES HOP_DONG(id),
    so_tien NUMERIC(15,2) NOT NULL,
    nguon_hoa_don_id BIGINT NOT NULL REFERENCES HOA_DON(id),
    ngay_phat_sinh DATE NOT NULL,
    hoa_don_su_dung_id BIGINT NULL REFERENCES HOA_DON(id),
    ngay_su_dung DATE NULL,
    CONSTRAINT ck_so_du_kha_dung_so_tien_duong CHECK (so_tien > 0),
    CONSTRAINT ck_so_du_kha_dung_tieu_dong_bo CHECK (
        (hoa_don_su_dung_id IS NULL AND ngay_su_dung IS NULL)
        OR (hoa_don_su_dung_id IS NOT NULL AND ngay_su_dung IS NOT NULL)
    )
);

CREATE INDEX ix_so_du_kha_dung_hop_dong_kha_dung
    ON SO_DU_KHA_DUNG (hop_dong_id, id)
    WHERE hoa_don_su_dung_id IS NULL;

CREATE INDEX ix_so_du_kha_dung_hoa_don_su_dung
    ON SO_DU_KHA_DUNG (hoa_don_su_dung_id);
