CREATE TABLE PHONG (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    toa_nha_id BIGINT NOT NULL REFERENCES TOA_NHA(id),
    so_phong VARCHAR(50) NOT NULL,
    tang INTEGER NOT NULL CHECK (tang > 0),
    dien_tich NUMERIC(10,2) NOT NULL CHECK (dien_tich > 0),
    suc_chua INTEGER NOT NULL CHECK (suc_chua > 0),
    gia_thue_mac_dinh NUMERIC(15,2) NOT NULL CHECK (gia_thue_mac_dinh >= 0),
    loai_phong VARCHAR(100) NOT NULL,
    trang_thai VARCHAR(20) NOT NULL CHECK (trang_thai IN ('TRONG', 'DANG_THUE', 'DA_COC', 'DANG_SUA', 'NGUNG')),
    CONSTRAINT uq_phong_toa_so UNIQUE (toa_nha_id, so_phong)
);

CREATE TABLE DICH_VU (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    toa_nha_id BIGINT NOT NULL REFERENCES TOA_NHA(id),
    ten VARCHAR(255) NOT NULL,
    cach_tinh VARCHAR(20) NOT NULL CHECK (cach_tinh IN ('THEO_CHI_SO', 'CO_DINH', 'THEO_NGUOI', 'THEO_SO_LUONG')),
    che_do_gia VARCHAR(20) NOT NULL CHECK (che_do_gia IN ('CO_DINH', 'BAC_THANG')),
    don_vi VARCHAR(50) NOT NULL,
    la_dien BOOLEAN NOT NULL DEFAULT FALSE,
    dang_su_dung BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE BANG_GIA (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    dich_vu_id BIGINT NOT NULL REFERENCES DICH_VU(id),
    don_gia NUMERIC(15,2) NOT NULL CHECK (don_gia >= 0),
    ngay_hieu_luc DATE NOT NULL
);

CREATE TABLE BANG_GIA_BAC_THANG (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    dich_vu_id BIGINT NOT NULL REFERENCES DICH_VU(id),
    bac INTEGER NOT NULL CHECK (bac > 0),
    tu_so_luong NUMERIC(15,2) NOT NULL CHECK (tu_so_luong >= 0),
    den_so_luong NUMERIC(15,2) NULL CHECK (den_so_luong IS NULL OR den_so_luong > tu_so_luong),
    ty_le NUMERIC(10,2) NOT NULL CHECK (ty_le > 0),
    don_gia NUMERIC(15,2) NOT NULL CHECK (don_gia >= 0),
    ngay_hieu_luc DATE NOT NULL
);
