CREATE TABLE NGUOI_THUE (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ho_ten VARCHAR(255) NOT NULL,
    ngay_sinh DATE NOT NULL,
    so_dien_thoai VARCHAR(20) NOT NULL,
    so_giay_to VARCHAR(50) NOT NULL,
    que_quan VARCHAR(255) NOT NULL,
    trang_thai_luu_tru VARCHAR(50) NULL
);

CREATE INDEX idx_nguoi_thue_ho_ten_lower ON NGUOI_THUE (LOWER(ho_ten));
CREATE INDEX idx_nguoi_thue_so_dien_thoai ON NGUOI_THUE (so_dien_thoai);
CREATE INDEX idx_nguoi_thue_so_giay_to ON NGUOI_THUE (so_giay_to);

CREATE TABLE NHAT_KY_THAO_TAC (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nguoi_dung_id BIGINT NOT NULL REFERENCES NGUOI_DUNG(id),
    hanh_dong VARCHAR(100) NOT NULL,
    doi_tuong VARCHAR(100) NOT NULL,
    gia_tri_truoc TEXT NULL,
    gia_tri_sau TEXT NULL,
    thoi_diem TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_nhat_ky_thao_tac_doi_tuong_thoi_diem
    ON NHAT_KY_THAO_TAC (doi_tuong, thoi_diem DESC);
